editor-components/stats/stats17/stats17.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  background-color: var(--composer-primary-color);

  .max-content .wrapper {
    align-items: center;

    .header {
      align-items: center;

      .subtitle {
        color: var(--composer-font-color-secondary);
        transform: none;
        background: transparent;
        padding: 0;
        border-radius: 0;
        &::before {
          display: none;
        }
      }

      .title,
      .description {
        text-align: center;
        color: var(--composer-font-color-secondary);
      }
    }

    .stats-grid {
      gap: var(--composer-gap-lg);
      margin-bottom: var(--composer-gap-lg);

      .card {
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;

        .stat-subtitle {
          text-align: center;
          color: var(--composer-font-color-secondary);
        }

        .stat-value {
          display: flex;
          align-items: baseline;

          .stat-prefix,
          .stat-number,
          .stat-suffix {
            font-size: 5rem;
            color: var(--composer-font-color-secondary);
          }
        }

        .stat-title {
          text-align: center;
          color: var(--composer-font-color-secondary);
        }

        .stat-description {
          text-align: center;
          color: var(--composer-font-color-secondary);
        }
      }
    }

    .button-container {
      display: flex;
      flex-wrap: wrap;
      gap: var(--composer-gap-sm);
      justify-content: center;

      .button,
      .button-text {
        content: "";
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container .max-content .wrapper .stats-grid {
    gap: var(--composer-gap-md);

    .card .stat-value .stat-prefix,
    .card .stat-value .stat-number,
    .card .stat-value .stat-suffix {
      font-size: 4rem;
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container .max-content .wrapper {
    .header .subtitle {
      text-align: center;
    }

    .stats-grid {
      gap: var(--composer-gap-md);

      .card .stat-value .stat-prefix,
      .card .stat-value .stat-number,
      .card .stat-value .stat-suffix {
        font-size: 3rem;
      }
    }
  }
}

