fix: adjust spacing between title and stats on desktop view

--- a/editor-components/stats/stats17/stats17.module.scss
+++ b/editor-components/stats/stats17/stats17.module.scss
@@ -29,7 +29,7 @@
 
     .stats-grid {
       gap: var(--composer-gap-lg);
-      margin-bottom: var(--composer-gap-lg);
+      margin-block: var(--composer-gap-lg);
 
       .card {
         display: flex;
